inputting sd data

--- a/demos/dungeons-and-developers/default.htm
+++ b/demos/dungeons-and-developers/default.htm
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dungeons & Developers</title>
-	<meta name="description" content="An RPG-style talent tree for web developers.">
-	<meta name="keywords" content="web design development rpg game talent skill">
+    <title>Situation:Deadly</title>
+	<meta name="description" content="Situation: Deadly skill tree.">
+	<meta name="keywords" content="skill tree nodes for the table-top d20 system, Situation:Deadly">
 	<link href="css/layout.css" rel="stylesheet">
 </head>
 <body>
@@ -103,21 +103,7 @@
 						<!--/ko-->
 					</ul>
 				</div>
-			</div>
-			<div class="sign-off">
-				<h2>It&rsquo;s dangerous to go alone!</h2>
-				<p>Throughout the dark corners of the web, doors are always opening to new challenges that will test the mettle of even the most stout developer. Let these watering holes provide a brief respite and an opportunity for you and other heroes to band together:
-				</p>
-				<ul>
-					<li><a onclick="_gaq.push(['_trackEvent','external link','footer','A List Apart']);" href="http://alistapart.com/" target="_blank">A List Apart</a></li>
-					<li><a onclick="_gaq.push(['_trackEvent','external link','footer','Smashing Magazine']);" href="http://www.smashingmagazine.com/" target="_blank">Smashing Magazine</a></li>
-					<li><a onclick="_gaq.push(['_trackEvent','external link','footer','Code Academy']);" href="http://www.codecademy.com/" target="_blank">Code Academy</a></li>
-					<li><a onclick="_gaq.push(['_trackEvent','external link','footer','Stack Overflow']);" href="http://www.stackoverflow.com/" target="_blank">Stack Overflow</a></li>
-					<li><a onclick="_gaq.push(['_trackEvent','external link','footer','reddit']);" href="http://www.reddit.com/r/webdesign/" target="_blank">reddit webdesign</a></li>
-				</ul>
-				<h3>Happy adventuring!</h3>
-				<a onclick="_gaq.push(['_trackEvent','external link','footer','352']);" href="http://www.352media.com/" target="_blank" class="logo-352">
-					<img src="img/logo352.png" alt="352"></a></div>
+			</div>			
 		</div>
 	</div>
 	<div class="ltIE9-show ltIE9-warning">
